Prepared project for review

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     smoke: smoke tests
     regression: regression tests
     current: my new tests in progress
+    need_review: test for review
